--- a/HTML TUTORIALS/tut7.htm
+++ b/HTML TUTORIALS/tut7.htm
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>java scrioit tutorial </title>
+    <title>java script tutorial </title>
 </head>
 <body>
     <script src="/JAVA SCRIPT/tut1.js"></script>
+    <script src="/JAVA SCRIPT/tut2.js"></script>
+    <script src="/JAVA SCRIPT/tut3.js"></script>
     <div class="container">
   <div class="class">
     <p> this is a paragraph </p>
