--- a/CSS/grid.html
+++ b/CSS/grid.html
@@ -8,9 +8,9 @@
     <style>
 .container{
     display: grid;
-    /* grid-template-rows: 1fr 1fr 1fr  ; */
+    grid-template-rows: 1fr 1fr 1fr  ;
     grid-gap: 1rem;
-    grid-template-columns: repeat(6  ,7fr);
+    /* grid-template-columns: repeat(6  ,7fr); */
     
     /* grid-template-rows: repeat(4,1fr); */
     /* you can set gap between the rown and colum by using this ----->   grid-column-gap: 2rem; grid-row-gap: 3rem; */
@@ -28,7 +28,8 @@
     padding: 12px;
 }
     </style>
-</head><div class="container">
+</head>
+<div class="container">
     <div class="box">NEWS</div>
     <div class="box">item-2</div>
     <div class="box">item-3</div>
