--- a/HTML TUTORIALS/tut6.htm
+++ b/HTML TUTORIALS/tut6.htm
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>id and classes </title>
+    <script src="/JAVA SCRIPT/tut6.js"></script>
 </head>
 <body>
 <h3> Id and classes </h3>
