--- a/HTML TUTORIALS/tut7.htm
+++ b/HTML TUTORIALS/tut7.htm
@@ -1,3 +1,5 @@
+<!-- formatting element in html  -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +18,30 @@
   </div>
 
     </div>
+
+<div class="">
+
+  <pre> 
+    hey , im sunny 
+
+    welcome back to my channel 
+
+
+    this is a programs for formattaing element in html 
+  </pre>
+
+  <b>this is a bold text </b> <br><br><br>
+  <strong>thios is a strong text </strong><br><br><br>
+  <i>this is a italic text </i><br><br><br>
+  <small>hey i'm small text </small><br><br><br>
+  <mark>i'm a marked text </mark><br><br><br>
+  <em>hey im a empahsized text </em><br><br><br>
+  <del>hey im a deletd text </del><br><br><br>
+  <ins>hey im a inserted text </ins>
+  <p>hey the squre of 2<sup>2</sup> is 4
+  </p>
+  <!-- similarly sub is used  -->
+</div>
 
 </body>
 </html>
