--- a/HTML TUTORIALS/tut3.htm
+++ b/HTML TUTORIALS/tut3.htm
@@ -1,18 +1,19 @@
-<!-- adding link an images to our webpage  -->
+<!-- adding link and images to our webpage and thier attribute   -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>link and images</title>
+    <title> adding link and images</title>
 </head>
 <body>
-    <a href="www.youtube.cpm/sunnyvlogs812">go to my channel </a>
-    <a href="https://www.linkedin.com/in/sushil-pandey-8ab638209/">go to my linkdin</a>
-    <a href="https://github.com/codERSunny812">go to my github</a>
+    <a href="www.youtube.cpm/sunnyvlogs812" target="_blank">go to my channel </a> <br><br>
+    <a href="https://www.linkedin.com/in/sushil-pandey-8ab638209/" target="_self">go to my linkdin</a><br><br>
+    <a href="https://github.com/codERSunny812" target="_top">go to my github</a><br><br>
+    <a href="www.w3school.com" target="_parent">w3school</a><br><br>
     <!-- now let's add images to our website -->
     <br>
-    <img src="https://source.unsplash.com/random/400x700">
+    <img src="https://source.unsplash.com/random/400x700" alt="error in loading image ">
 </body>
 </html>
