--- a/comple js /index.htm
+++ b/comple js /index.htm
@@ -14,6 +14,7 @@
     <!-- <script src="/comple js /tutorial.js"></script>
      -->
 
-     <script src="tutorial6.js"></script>
+     <!-- <script src="tutorial10.js"></script> -->
+     <script src="tutorial12.js"></script>
 </body>
 </html>
