--- a/comple js /index.htm
+++ b/comple js /index.htm
@@ -15,6 +15,11 @@
      -->
 
      <!-- <script src="tutorial10.js"></script> -->
-     <script src="tutorial12.js"></script>
+     <!-- <script src="tutorial12.js"></script>
+     -->
+     <!-- <script src="tutorial4.js"></script> -->
+     <!-- <script src="tutorial11.js"></script> -->
+     <!-- <script src="tutorial13.js"></script> -->
+     <script src="tutorial14.js"></script>
 </body>
 </html>
