--- a/comple js /index.htm
+++ b/comple js /index.htm
@@ -20,6 +20,9 @@
      <!-- <script src="tutorial4.js"></script> -->
      <!-- <script src="tutorial11.js"></script> -->
      <!-- <script src="tutorial13.js"></script> -->
-     <script src="tutorial14.js"></script>
+     <!-- <script src="tutorial14.js"></script> -->
+     <!-- <script src="tutorial15.js"></script> -->
+     <!-- <script src="tutorial18.js"></script> -->
+     <script src="practice.js"></script>
 </body>
 </html>
