--- a/comple js /part2/dom-tutorial/index.html
+++ b/comple js /part2/dom-tutorial/index.html
@@ -24,7 +24,9 @@
     <!-- <script src="./120.js" defer></script> -->
     <!-- <script src="./121.js" defer></script> -->
     <!-- <script src="./127.js" defer></script> -->
-    <script src="./129.js" defer></script>
+    <!-- <script src="./129.js" defer></script> -->
+    <!-- <script src="./131.js" defer></script> -->
+
     <title>My Website</title>
   </head>
   <body>
