transition in css

--- a/CSS/transition.htm
+++ b/CSS/transition.htm
@@ -11,36 +11,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Blaka&family=Dancing+Script&display=swap" rel="stylesheet">
-    <style>
-        .container{
-            background-color: violet;
-            height: 1100px;
-            margin: 1px 2px 3px 4px;
-            padding: 2px 4px 6px 8px;
-        }
-        #box{
-            border: 2px solid greenyellow;
-            background-color: tomato;
-            margin: 3px;
-            height: 100px;
-            width: 520px;
-            text-align: center;
-            align-items: center;
-        }
-        #box h1:hover{
-            font-size: 35px;
-            font-family: 'Dancing Script', cursive;
-        }
-        #box p:hover{
-            font-size: 36px;
-            font-family: 'Blaka', cursive;
-font-family: 'Dancing Script', cursive;
-        }
-        #box:hover{
-            height: 320px;
-            width: 720px;
-        }
-    </style>
+   <link rel="stylesheet" href="transition.css">
 
 </head>
 <body>
