selector in css

--- a/CSS/selector.htm
+++ b/CSS/selector.htm
@@ -5,44 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .container{
-            background-color: #ffd4d4;
-            border: 2px solid rgb(156, 223, 68);
-            padding: 23px 23px;
-            margin: 21px auto;
-            width: 700px;
-        }
-        a{
-            text-decoration: none;
-        }
-        /* these are pseudo selector  */
-        a:hover{
-            background-color: darkgoldenrod;
-            color: deeppink;
-        }
-        a:active{
-            background-color: rgb(212, 19, 93);
-            
-        }
-        /* a:visited{
-             background-color: turquoise;
-        }
-         */
-         button:hover{
-             background-color: tomato;
-         }
-        .btn{
-            background-color: brown;
-            padding: 6px;
-            border: none;
-            cursor: pointer;
-            font-size: small;
-            font-style: oblique;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif        ;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="selector.css">
 </head>
 <body>
     <div class="container">
