--- a/CSS/attribute_and_nthchild.htm
+++ b/CSS/attribute_and_nthchild.htm
@@ -5,45 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>attribute and nth child </title>
-<style>
-    .container{
-background-color: rgb(166, 86, 231);
-display: block;
-width: 1220px;
-height: 120vh;
-    }
-    form{
-        margin-top: 23px;
-        margin-left: 34px;
-    }
-    input{
-        display: block;
-        text-align: center;
-        font-size: 24px;
-       
-    }
-    /* from this we can apply css at a specific place in our html form  just you ahve to change the type  */
-    input[type="text"]{
-        border: 2px solid rgb(237, 240, 76);
-        background-color: rgb(172, 228, 228);
-    }
-    input[type="password"]{
-        border: 12px dotted khaki;
-    }
-
-    /* now let's know about nth :nth-child() */
-li:nth-child(2){
-    color: tomato;
-}
-/* this will change the color of the list which is present at the positon 1 */
-li:nth-child(1){
-    color: violet;
-}
-
-
-/* similarly you can do for item present at odd and even postion  */
-    
-</style>
+    <link rel="stylesheet" href="attribute_nthchild.css">
 </head>
 <body> 
     <div class="container">
