--- a/CSS/colorincss.htm
+++ b/CSS/colorincss.htm
@@ -5,21 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #firstpara{
-            color:blueviolet;
-            background-color: rgb(14, 64, 202); /*color by name */
-        }
-        #secondpara{
-            color:rgb(233, 14, 167); /*color by rgb name */ 
-            font-size: x-large;
-        }
-        #thirdpara{
-            color: #45c645; /*color by hex value */
-            font-size: larger;
-        }
-
-    </style>
+    <link rel="stylesheet" href="colorincss.css">
 </head>
 <body>
     <h2> this is a first box</h2>
