--- a/CSS/cssfont.htm
+++ b/CSS/cssfont.htm
@@ -8,19 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Raleway:ital,wght@0,200;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
-<style>
-    p.font1{
-     background-color: crimson;
-     font-family:Arial;
-     
-    }
-    .font2{
-        font-family: 'Open Sans', sans-serif,'Raleway', sans-serif;;
-        font-weight: bolder;
-        line-height: 4em;
-        font-style:italic ;
-    }
-</style>
+<link rel="stylesheet" href="cssfont.css">
 </head>
 <body>
     <h1>css font </h1>
