--- a/CSS/navbar.htm
+++ b/CSS/navbar.htm
@@ -5,41 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar </title>
-    <style>
-        .navbar{
-            background-color: rgb(20, 20, 20);
-            border-radius: 22px;
-        }
-        .navbar ul{
-            overflow: auto;
-        }
-        .navbar li{
-            float: left;
-            list-style: none;
-            margin: 10px 20px;
-            padding-top: 8px;
-        }
-        .navbar li a{
-            padding: 3px 2px 12px 2px;
-            text-decoration: none;
-            color: antiquewhite;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            font-size: medium;
-        }
-        .navbar li a:hover{
-            background-color: darkgoldenrod;
-        }
-        .search{
-            float: right;
-            padding: 12px 19px 12px 12px;
-            margin: 2px;
-
-        }
-        .navbar input{
-            border:2px solid whitesmoke ;
-            border-radius: 3px;
-        }
-    </style>
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
  <body>
