--- a/CSS/grid.html
+++ b/CSS/grid.html
@@ -5,29 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid in css</title>
-    <style>
-.container{
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr  ;
-    grid-gap: 1rem;
-    /* grid-template-columns: repeat(6  ,7fr); */
-    
-    /* grid-template-rows: repeat(4,1fr); */
-    /* you can set gap between the rown and colum by using this ----->   grid-column-gap: 2rem; grid-row-gap: 3rem; */
-
-    /* if you use this then this space is provided between every grid items whether it's a colum or a row */
- /* now lets make the grid responsive  */
- /* grid-template-columns: repeat(auto-fit,minmax(400px,9fr)); */
-  
-
-
-}
-.box{
-    border: 2px solid black;
-    background-color: tomato;
-    padding: 12px;
-}
-    </style>
+    <link rel="stylesheet" href="grid.css">
 </head>
 <div class="container">
     <div class="box">NEWS</div>
