--- a/CSS/responsive.htm
+++ b/CSS/responsive.htm
@@ -5,22 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsoive and font unit </title>
-
-    <style>
-        h2{
-     text-align: center;
-        }
-        .container{
-            border: 5px solid navy;
-            width: 892px;
-            text-align: center;
-            /* font-size: em; */
-        }
-
-        /* #first{
-            font-size: 3em;
-        } */
-    </style>
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <h2>this is a tutorial of making our website responsive </h2>
